--- a/flink-connectors/flink-connector-rocketmq/pom.xml
+++ b/flink-connectors/flink-connector-rocketmq/pom.xml
@@ -33,7 +33,7 @@ under the License.
 		<dependency>
 			<groupId>com.bytedance</groupId>
 			<artifactId>java-rocketmq-client2</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.6</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>logback-classic</artifactId>
@@ -254,6 +254,10 @@ under the License.
 										<relocation>
 											<pattern>org.springframework</pattern>
 											<shadedPattern>org.apache.flink.connector.rocketmq.shaded.org.springframework</shadedPattern>
+										</relocation>
+										<relocation>
+											<pattern>com.bytedance.schema.registry</pattern>
+											<shadedPattern>org.apache.flink.connector.rocketmq.shaded.com.bytedance.schema.registry</shadedPattern>
 										</relocation>
 									</relocations>
 								</configuration>
