--- a/flink-connectors/flink-connector-htap/pom.xml
+++ b/flink-connectors/flink-connector-htap/pom.xml
@@ -33,7 +33,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<htap.jclient.version>1.0.2.1-SNAPSHOT</htap.jclient.version>
+		<htap.jclient.version>1.0.2.3-master-SNAPSHOT</htap.jclient.version>
 		<junit.jupiter.version>5.4.1</junit.jupiter.version>
 	</properties>
 
